[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/boss.gd" type="Script" id=1]
[ext_resource path="res://sprites/boss_live.png" type="Texture" id=2]
[ext_resource path="res://audio/boss/boss_2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/boss/the_boss_tentacles.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/boss/boss_3.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/boss/boss_1.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/boss/boss_attack.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/mob_ray.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 200.0

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]

resource_name = "initial"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tentacles:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AudioStreamRandomPitch" id=4]

audio_stream = ExtResource( 5 )
random_pitch = 1.3

[sub_resource type="AudioStreamRandomPitch" id=5]

audio_stream = ExtResource( 6 )
random_pitch = 1.3

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 800, 30 )

[node name="boss" type="RigidBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 1
mode = 2
mass = 10000.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 0, -124 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 4
_sections_unfolded = [ "Animation", "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -173 )
shape = SubResource( 1 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = "initial"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/initial = SubResource( 3 )
next/initial = "idle"
blend_times = [  ]

[node name="die" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="tentacles" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="boss1" type="AudioStreamPlayer2D" parent="." index="5"]

stream = SubResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="boss0" type="AudioStreamPlayer2D" parent="." index="6"]

stream = SubResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="bullet_point1" type="Node2D" parent="." index="7"]

position = Vector2( -298, -339 )

[node name="bullet_point2" type="Node2D" parent="." index="8"]

position = Vector2( 282, -340 )

[node name="bullet" type="AudioStreamPlayer2D" parent="." index="9"]

position = Vector2( 1, -362 )
stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 5.6
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="ray" type="AudioStreamPlayer2D" parent="." index="10"]

position = Vector2( 3, -253 )
stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="ray_sprite" type="Sprite" parent="." index="11"]

visible = false
position = Vector2( 2, -256 )
scale = Vector2( 8, 4 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, -11 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Area2D" type="Area2D" parent="ray_sprite" index="0"]

scale = Vector2( 0.125, 0.25 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Shape2D" type="CollisionShape2D" parent="ray_sprite/Area2D" index="0"]

position = Vector2( 816, 0 )
shape = SubResource( 6 )


